Spacing shorthand fix (#106)
* Direction-aware fallbacks for padding/margin shorthand properties

* Add all dimension to logical properties

* Don't warn on physical properties in select case (sass tests)

--- a/source/sass/mixins/_spacing.scss
+++ b/source/sass/mixins/_spacing.scss
@@ -30,7 +30,7 @@
   @if $dimension == "" {
 
     @include _expect_at_most($sizes, 4, "More than four sizes supplied when no dimension") {
-      @include rem($space-type, $sizes);
+      @include logical-property($space-type, all, $sizes);
     }
 
   } @else if $dimension == inline {
